llvm-toolchain-14 (1:14.0.4-4) UNRELEASED; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Disable compiler-rt built-ins on x32

 -- John Paul Adrian Glaubitz <glaubitz@physik.fu-berlin.de>  Wed, 01 Jun 2022 07:34:47 +0200

llvm-toolchain-14 (1:14.0.4-3) unstable; urgency=medium

  * Fix GRPC installation path and files

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Tue, 31 May 2022 12:09:28 +0200

llvm-toolchain-14 (1:14.0.4-2) unstable; urgency=low

  * Add breaks/replaces for grpc binaries being placed in another package in Ubuntu
  * Fix GRPC installation for ports architectures
  * Add support for Ubuntu kinetic
  * rules: take some patches from Ubuntu to save extra space during build

 -- Gianfranco Costamagna <locutusofborg@debian.org>  Sun, 29 May 2022 12:53:47 +0200

llvm-toolchain-14 (1:14.0.4-1) unstable; urgency=medium

  [ John Paul Adrian Glaubitz ]
  * Enable GRPC build dependency only on supported targets

  [ Sylvestre Ledru ]
  * New upstream release

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 25 May 2022 08:49:20 +0200

llvm-toolchain-14 (1:14.0.3-2) unstable; urgency=medium

  * Fix an autopkgtest on arm (Closes:# 1010716)
    Thanks to Pino Toscano for the patch
  * Fix the search path for hip (Closes: #1010467)
  * Add the option -DLLVM_ENABLE_CURL=ON
    See https://github.com/llvm/llvm-project/issues/55289
    (LP: #1971743)

 -- Sylvestre Ledru <sylvestre@debian.org>  Mon, 09 May 2022 20:40:39 +0200

llvm-toolchain-14 (1:14.0.3-1) unstable; urgency=medium

  * New upstream release

 -- Sylvestre Ledru <sylvestre@debian.org>  Fri, 29 Apr 2022 09:23:16 +0200

llvm-toolchain-14 (1:14.0.2-1) unstable; urgency=medium

  * New upstream release

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 27 Apr 2022 08:36:00 +0200

llvm-toolchain-14 (1:14.0.1-1) unstable; urgency=medium

  * New upstream release
    Fixes the ABI issues

 -- Sylvestre Ledru <sylvestre@debian.org>  Wed, 13 Apr 2022 09:33:24 +0200
